--- a/apps/web/src/components/homepage/Stats.astro
+++ b/apps/web/src/components/homepage/Stats.astro
@@ -25,7 +25,7 @@ const bgImageUrl = keyStats?.backgroundImage?.asset?.url
 ---
 
 {stats && stats.length > 0 && (
-  <section class="min-h-[40vh] px-5 py-10 sm:px-[60px] sm:py-[100px] relative overflow-hidden">
+  <section class="min-h-[40vh] px-5 py-10 sm:px-[60px] sm:py-[100px] relative overflow-hidden border-t border-[var(--color-neutral)]/30">
     {bgImageUrl && (
       <>
         <img
